feat: 给帖子增加分类和图片上传
